@@ -29,17 +29,25 @@
 			</roles>
 		</contributor>
 	</contributors>
-	<version>2.03</version>
+	<version>2.0.3</version>
 	<description>
-		Though many networking protocol needs have been addressed, a
+		Though many networking protocol needs have been addressed,
+		a
 		large gap exists in common guaranteed-delivery messaging
-		middleware. AMQP fills that gap. Advanced Message Queuing
-		Protocol, enables complete interoperability for messaging
-		middleware, both the networking protocol and the semantics of
-		broker services are defined in AMQP. The AMQP model explicitly
-		defines the server's semantics because interoperability demands
-		the same semantics for any server implementation. To enable
-		technology-neutral interoperability, AMQP defines an efficient
+		middleware.
+		AMQP fills that gap. Advanced Message Queuing
+		Protocol, enables
+		complete interoperability for messaging
+		middleware, both the networking
+		protocol and the semantics of
+		broker services are defined in AMQP. The
+		AMQP model explicitly
+		defines the server's semantics because
+		interoperability demands
+		the same semantics for any server
+		implementation. To enable
+		technology-neutral interoperability, AMQP
+		defines an efficient
 		wire-level format with modern features.
 	</description>
 	<licenses>
@@ -96,6 +104,17 @@
 					<maxmemory>1g</maxmemory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<configuration>
+					<formats>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+
+			
 		</plugins>
 	</reporting>
 
@@ -122,33 +141,75 @@
 				</configuration>
 
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.12</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+				    <formats>
+				    	<format>xml</format>
+				    </formats>  
+				    <argLine>-Xms128M -Xmx2650M -XX:MaxPermSize=512M -XX:MaxHeapSize=256m</argLine><!---XX:PermSize=128M</argLine-->
+				    <forkMode>pertest</forkMode>
+				    <!--threadCount>1</threadCount-->
+				    <runOrder>alphabetical</runOrder>
+				</configuration>
+			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>javacc-maven-plugin</artifactId>
+				<version>2.6</version>
+				<!-- <executions>
+					<execution>
+						<id>javacc</id>
+						<goals>
+							<goal>javacc</goal>
+						</goals>-->
+						<configuration>
+							<sourceDirectory>src/main/java/es/upv/dsic/gti_ia/norms
+							</sourceDirectory>
+							<outputDirectory>src/main/java/</outputDirectory>
+						</configuration>
+				<!-- 	</execution>
+				</executions>-->
+			</plugin>
 
 		</plugins>
 	</build>
 	<profiles>
 		<profile>
-		<id>metric</id>
-		<build>
-			<plugins>
-				<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration> <formats>
-					<format>html</format>
-					<format>xml</format> </formats>
-				</configuration>
-				</plugin>
-			</plugins>
-		</build>
+			<id>metric</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+						<version>2.5.1</version>
+						<configuration>
+							<formats>
+								<format>html</format>
+								<format>xml</format>
+							</formats>
+							<argLine>-Xms1000m -Xmx2048m -XX:MaxPermSize=4096m</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -201,12 +262,12 @@
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>jena</artifactId>
-			<version>2.6.1</version>
+			<version>2.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>arq</artifactId>
-			<version>2.6.1</version>
+			<version>2.8.7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
@@ -259,7 +320,7 @@
 			<version>3.2</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-client-seguridad</artifactId>
 			<version>0.7</version>
@@ -269,7 +330,20 @@
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-common-seguridad</artifactId>
 			<version>0.7</version>
+		</dependency-->
+
+		<dependency>
+			<groupId>org.apache</groupId>
+			<artifactId>qpid-client</artifactId>
+			<version>0.20</version>
+			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache</groupId>
+			<artifactId>qpid-common</artifactId>
+			<version>0.10</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.rampart</groupId>
@@ -323,6 +397,13 @@
 		</repository>
 	</repositories>
 
-
+	<properties>
+		<cobertura.maxmem>8292M</cobertura.maxmem>
+		<maven.cobertura.instrumentation.maxmemory>8192M
+		</maven.cobertura.instrumentation.maxmemory>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compile.encoding>UTF-8</maven.compile.encoding>
+		<maven.compile.fork>true</maven.compile.fork>
+	</properties>
 
 </project>
